fix nav overflow

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -5,13 +5,14 @@ $menuBorderWidth: 62px;
 }
 
 #mobile-menu {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     position: fixed;
     z-index: 9999 !important;
     top: 0;
     right: -101%;
     overflow-x: hidden;
+    
     background-color: var(--main-color);
 
     &::after {
@@ -28,8 +29,8 @@ $menuBorderWidth: 62px;
 
     #menu-overlay {
         padding: 0.5rem 1rem;
-        height: 100%;
-
+        height: 100vh;
+        
         .menu-overlay-header {
             #logo-menu {
                 filter: brightness(0) invert(1);
@@ -61,8 +62,6 @@ $menuBorderWidth: 62px;
                 font-weight: bold;
                 margin-bottom: 15px;
                 width: 100%;
-                padding-top: 10px !important;
-                padding-bottom: 10px !important;
             
                 &:hover {
                     cursor: pointer;
@@ -80,6 +79,11 @@ $menuBorderWidth: 62px;
                     .dd-button {
                         margin-right: $menuBorderWidth;
                         padding: 0.25rem 1rem;
+                        transition: transform .2s;
+
+                        &:hover {
+                            transform: scale(1.3);
+                        }
                     }
                 }
 
